...
    <string name="login_registration_email_hint">email address</string>
    <string name="login_button_login">Login</string>
    <string name="login_segment_sign_in">Log In</string>
    <string name="login_segment_sign_up">Sign Up</string>
    <string name="login_forgot_password">Forgot password</string>
    <string name="login_custom_server">Self-hosted custom server</string>
    <string name="login_custom_server_hint">https://www.newsblur.com</string>
    <string name="login_custom_server_subtitle">Use your own NewsBlur installation</string>
    <string name="login_custom_server_active">Custom server: %1$s</string>
    <string name="login_custom_server_edit">Tap to edit or reset your server URL</string>
    <string name="login_custom_server_dialog_title">Custom server</string>
    <string name="login_custom_server_dialog_body">Leave this blank to use NewsBlur, or enter the URL of your self-hosted installation. It takes effect immediately for login and signup.</string>
    <string name="login_message_error">There was problem logging in to NewsBlur.</string>
...
    <string name="new_folder_name_hint">Enter new folder name</string>
    <string name="new_tag_name_hint">Enter new tag name</string>
    <string name="add_feed_error">Could not add feed</string>
    <string name="add_folder_error">Could not add folder</string>
    <string name="menu_mark_all_as_read">Mark all as read</string>
    <string name="menu_logout">Log out</string>
    <string name="contact_us">Contact us</string>
    <string name="contact_description">NewsBlur is a news reader and aggregator developed by NewsBlur, Inc. Contact the NewsBlur team for app support, questions, or feedback.</string>
    <string name="contact_email_label">Email the developer</string>
    <string name="contact_email" translatable="false">android@newsblur.com</string>
    <string name="contact_send_email">Send email</string>
    <string name="contact_website_label">NewsBlur website</string>
    <string name="contact_website" translatable="false">https://www.newsblur.com</string>
    <string name="contact_open_website">Visit website</string>
    <string name="contact_back">Back</string>
    <string name="contact_no_email_app">No email app is installed. You can select and copy the email address on this page.</string>
    <string name="contact_no_browser">No web browser is installed. You can select and copy the website address on this page.</string>
    <string name="menu_feedback">Send app feedback</string>
    <string name="menu_feedback_post">Create a feedback post</string>
    <string name="menu_feedback_email">Email a bug report</string>
...
